--- a/x3mlEditor/web/changes.html
+++ b/x3mlEditor/web/changes.html
@@ -34,6 +34,12 @@ This file is part of the x3mlEditor webapp of Mapping Memory Manager project.
         <meta name="viewport" content="width=device-width">
     </head>
     <body>
+        <p>26/09/2014: Fixed a bug that made editor suggest less classes when there was only 1 target schema file (aka E41-E42).</p>
+        <p>13/08/2014: Style changes after discussion with Martin.</p>
+        <p>08/08/2014: Added new mode: Instance_Generator. If Maria thinks it's ok, I'll also include Label_Generator mode.</p>
+        <p>31/07/2014: Links now open in new window/tab.</p>
+        <p>28/07/2014: Added extra namespace (xsd) needed by Gerald!</p>
+        <p>23/07/2014: Added Exception Handler to show an error page if something goes wrong!</p>
         <p>23/06/2014: Literal bug fixed!</p>
         <p>30/05/2014: Prefix support complete!</p>
         <p>29/05/2014: Added Namespaces support. Combos with prefixed values!</p>
